Complete CORS fix for Render deployment
- Fix CorsConfig.java to use environment variables instead of wildcard
- Remove hardcoded localhost URLs from StudentDashboard.tsx
- Add API_ENDPOINTS import for proper API URL management
- Update application-render.yml with proper CORS configuration
- Create nginx.render.conf for frontend with security headers
- Add comprehensive CORS fix documentation
- Fix wildcard + credentials conflict in CORS configuration
- Add environment variable support for allowed origins
- Create complete deployment guide with CORS solutions